# Fichados

./: .gitignore  README.md  TASKS.md  planification.md  pyproject.toml
src/modules/users/domain/: player.py
src/shared/domain/: entity.py  exceptions.py  repository.py  value_object.py
test/: test_smoke.py
