[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fichados"
version = "0.1.0"
description = "Plataforma para unir personas que desean jugar un partido de fútbol"

requires-python = ">=3.14"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.ruff]

line-length = 88
target-version = "py314"

[tool.hatch.build.targets.wheel]
packages = [
    "src/modules",
    "src/shared"
]
